[project]
name = "customer-support-openenv"
version = "0.1.0"
description = "OpenEnv customer support environment"
authors = [
  { name = "Feroz" }
]
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "openai",
  "openenv>=0.2.0"
]

[project.scripts]
server = "server.app:app"

[tool.setuptools]
py-modules = ["environment", "models", "tasks", "grading", "inference"]
packages = ["server"]
