[project]
name = "customer-support-openenv"
version = "0.1.0"
description = "OpenEnv customer support environment"
authors = [
  { name = "Feroz" }
]
dependencies = [
  "fastapi==0.135.2",
  "uvicorn==0.42.0",
  "pydantic==2.12.5",
  "openai==2.30.0",
  "openenv-core==0.2.3"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
py-modules = ["environment", "models", "tasks", "grading", "inference"]
packages = ["server"]
